--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,5 @@ main:
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
-    - title: "Sitemap"
+  #  - title: "Sitemap"
       url: /sitemap/
