--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,4 +15,4 @@ main:
   # - title: "Sample Collections"
   #   url: /collection-archive/
   #  - title: "Sitemap"
-      url: /sitemap/
+  #   url: /sitemap/
