--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
     - title: "Categories"
       url: /categories/
     - title: "Tags"
-      url: /tags/
+      url: /tag/
   # - title: "Quick-Start Guide"
       url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
