--- a/_config.yml
+++ b/_config.yml
@@ -276,8 +276,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: false
-      date: true
+      read_time: true
       comments: # true
       share: true
       related: true
