--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     - title: "Tags"
       url: /tag/
   # - title: "Quick-Start Guide"
-      url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
