--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-    - title: "Posts"
-      url: /year-archive/
+  #  - title: "Posts"
+  #    url: /year-archive/
     - title: "Categories"
       url: /categories/
     - title: "Tags"
